src/test/error/var3.lns
fn func() {
   let! mut val1, val2 = 1 {    // error
   };
}
